# shinsa-tori

./: .gitignore  LICENSE  README.md  clean_data_loader.py  config.yaml  config_helper.py  docker-compose.yml  main.py  pdf_extractor.py  pyproject.toml  raw_data_transformer.py
configs/: README.md  config.yaml  config_helper.py
shared/: constants.py  log_helper.py  ranks_helper.py  string_helper.py
shinsa_tori/: scrapy.cfg
shinsa_tori/shinsa_tori/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
shinsa_tori/shinsa_tori/database/: connect.py
shinsa_tori/shinsa_tori/shared/: constants.py
shinsa_tori/shinsa_tori/spiders/: aichi_spider.py  chiba_spider.py  fukuoka_spider.py  hokkaido_spider.py  ishikawa_spider.py  kagoshima_spider.py  kanagawa_spider.py  kochi_spider.py  nippon_federation_spider.py  nippon_kyudojo_spider.py  osaka_spider.py  tokyo_district_one_spider.py  tokyo_district_three_spider.py  tokyo_district_two_spider.py
