[project]
name = "shinsa-tori"
version = "0.1.0"
description = ""
authors = [
    {name = "Chih Kai Wen",email = "ckwen1988@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy (>=2.16.0,<3.0.0)",
    "pdfplumber (>=0.11.10,<0.12.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
